# Networked-Fs-Cpp

./: CMakeLists.txt  FsOperations.cpp  Makefile  README.md  SUBMIT  agout.txt  autotag.sh  build.sh  checkTests.sh  correct.sh  createfs  createfs_macos  delete.out  deletefs.out  diff.txt  diskManager.cpp  file1.txt  file2.txt  fs_client.h  fs_param.h  fs_server.h  main.cpp  out.txt  runtests.sh  showfs  showfs_macos  testAllocation.cpp  testAllocation2.fs  testDel.cpp  testDel.out  testDeleteSetup.cpp  testEmpty.cpp  testEthanFill.cpp  testEx.cpp  testExhaustive.cpp  testExhaustive2.cpp  testF.cpp  testF1  testFile.cpp  testFullEx.cpp  (+8 more)
scripts/: build.sh  runtests.sh
src/: FsOperations.h  diskManager.h  kittyServer.cpp  kittyServer.h  parseRequests.cpp  parseRequests.h
tests/: fs2.fs  testAllocation2.cpp  testDeep.cpp  testDelete.cpp  testDelete.fs  testDirBlock.cpp  testEdge.cpp  testEthan.cpp  testExpansive2.cpp  testExpansive2.fs  testF1.cpp  testF1.fs  testFill1.cpp  testFs.cpp  testFull.cpp  testFullExOg.cpp  testFullSys.cpp  testInvalid.cpp  testMax.cpp  testMaxLength2.cpp  testMix.cpp  testRecurse.cpp  testRecurse.fs  testSpec.cpp  testSys.cpp  testSys2.cpp  testSystem.cpp
